--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+  height: 600rpx;
 }
 
 .userinfo-avatar {
