提交小程序组件测试

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,6 +9,7 @@
     <button bindtap="getStorage"> 获取Storage </button>
     <button bindtap="setStorage"> 设置Storage </button>
   </view>
+  <my-component my-property2="index中的prop" />
   <view class="usermotto" bindtap="showX">
     <text class="user-motto" bindtap="showX">{{motto}}</text>
   </view>
