--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,7 +9,8 @@
     <button bindtap="getStorage"> 获取Storage </button>
     <button bindtap="setStorage"> 设置Storage </button>
   </view>
-  <my-component my-property2="index中的prop" />
+  <my-component wx:if="{{false}}" my-property2="index中的prop" />
+  <button bindtap="gotoTest"> go to test </button>
   <view class="usermotto" bindtap="showX">
     <text class="user-motto" bindtap="showX">{{motto}}</text>
   </view>
